# finite-element-first-code

./: CMakeLists.txt
Test/: CMakeLists.txt
src/: CMakeLists.txt  fem_sc.cpp  tanalysis.cpp  tanalysis.h  telemento.cpp  telemento.h  telemento0d.cpp  telemento0d.h  telemento1d.cpp  telemento1d.h  telemento2d_quad.cpp  telemento2d_quad.h  telemento2d_tri.cpp  telemento2d_tri.h  tintegracao.cpp  tintegracao.h  tintegracao2d_quad.cpp  tintegracao2d_quad.h  tintegracao2d_tri.cpp  tintegracao2d_tri.h  tmalha.cpp  tmalha.h  tmaterial.cpp  tmaterial.h  tmaterial1d.cpp  tmaterial1d.h  tmaterial2d.cpp  tmaterial2d.h  tmaterialbc.cpp  tmaterialbc.h  tnos.cpp  tnos.h
src/main/: CMakeLists.txt  fem_sc.cpp
src/test/: CMakeLists.txt  Test_Elemento_2d.cpp  Test_Int_2d_quad.cpp  Test_Int_2d_tri.cpp
